--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   <body>
     <header>
       <nav class="container">
+        <svg width="19px" height="18px" viewBox="0 0 19 18" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+          <rect class="hamburger" fill="#fff" x="0" y="0" width="19" height="2"></rect>
+          <rect class="hamburger" fill="#fff" x="0" y="8" width="19" height="2"></rect>
+          <rect class="hamburger" fill="#fff" x="0" y="16" width="19" height="2"></rect>
+        </svg>
         <h4>Bark.io</h4>
         <button>Sign Up</button>
       </nav>
@@ -43,9 +48,11 @@
 
     <section class="purple-100">
       <div class="container">
+        <img src="images/logo.svg">
         <h1>Bark.io</h1>
         <h2>The simplest way to find adoptable dogs around you.</h2>
         <p><button>Sign Up</button></p>
+        <img src="images/hero.png">
       </div>
     </section>
 
